--- a/src/scripts/package.json
+++ b/src/scripts/package.json
@@ -11,6 +11,8 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^4.18.2",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "xlsx": "^0.17.1"
   }
 }
